# fps-c-game

./: .gitignore  CMakeLists.txt  Character.h  Makefile  REDME.md  game_menu.sln  game_menu.vcxproj  game_menu.vcxproj.filters  main.cpp
Image/: dawn_of_the_gods.tsx  level1..tmx  level1.xml  level2.xml  level3.xml  level4.xml  level5.xml
game_menu/x64/Debug/: game_menu.exe.recipe  game_menu.ilk  vc143.idb
game_menu/x64/Debug/game_menu.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  game_menu.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
include/: Background.h  Entity.h  Game.h  GameMenu.h  Level.h  Map.h  Player.h  Ray.h  Raycaster.h  TileMap.h
src/: Entity.cpp  Game.cpp  GameMenu.cpp  Level.cpp  Player.cpp  TileMap.cpp  main.cpp
